Tue Nov 15 15:43:31 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3531b_Regression/server.cpp:
          Fixed ST build compile error.

        * tests/Mixed_Sync_ASync_Events/test_i.cpp:
          Trying to silence strict aliasing warnings.

Tue Nov 15 08:23:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * NEWS:
        * docs/Options.html:

          Updated for RW & EXCLUSIVE changes.

Mon Nov 14 09:22:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/MixedSyncASyncEvents.mpc:
        * tests/Mixed_Sync_ASync_Events/main.cpp:
        * tests/Mixed_Sync_ASync_Events/test.idl:
        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Fuzz fixes.

Mon Nov 14 06:39:28 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.cpp:

          Fixed unused arguments.

Sun Nov 13 21:40:34 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.cpp:

          Fixed signature for virtual override.

        * tests/Mixed_Sync_ASync_Events/main.cpp:

          Fixed WChar build error.

Sun Nov 13 12:00:36 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Extended test.

Sun Nov 13 11:31:21 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/main.cpp:
        * tests/Mixed_Sync_ASync_Events/test_i.h:
        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Fixed more Win32 warnings and compile errors :-(

Sun Nov 13 11:03:23 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/main.cpp:
        * tests/Mixed_Sync_ASync_Events/test.idl:
        * tests/Mixed_Sync_ASync_Events/test_i.h:
        * tests/Mixed_Sync_ASync_Events/test_i.cpp:

          Fixed Win32 compiler errors.
